...
            "state" : "translated",
            "value" : "ПРОДОВЖИТИ"
          }
        }
      }
    },
    "Continue Level" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue Level"
          }
...
            "state" : "translated",
            "value" : "Вводить маленькі цифри-кандидати для відстеження можливостей."
          }
        }
      }
    },
    "Erase" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erase"
          }
...
            "state" : "translated",
            "value" : "Рівень %lld"
          }
        }
      }
    },
    "Level Builder" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Level Builder"
          }
...
            "state" : "translated",
            "value" : "Швидкий мультивибір"
          }
        }
      }
    },
    "My Custom Levels" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "My Custom Levels"
          }
...
            "state" : "translated",
            "value" : "Режим палітри"
          }
        }
      }
    },
    "Pause" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
          }
...
            "state" : "translated",
            "value" : "Розміщення крапок"
          }
        }
      }
    },
    "Play Campaign" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Play Campaign"
          }
...
            "state" : "translated",
            "value" : "Вибрана клітинка"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
...
            "state" : "translated",
            "value" : "Стандартна сітка судоку 9x9."
          }
        }
      }
    },
    "Start Level" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Level"
          }
...
            "state" : "translated",
            "value" : "Відстежує ваш прогрес. Поставте на паузу, щоб зупинити годинник."
          }
        }
      }
    },
    "Undo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Undo"
          }
...
