...
                                }
                                .buttonStyle(UtilityVersaButtonStyle())
                                
                                Button(action: {
                                    showSettings = true
                                }) {
                                    Image(systemName: "gearshape.fill")
                                }
                                .buttonStyle(UtilityVersaButtonStyle())
                            }
                            .padding(.bottom, 40)
                            .transition(.move(edge: .bottom).combined(with: .opacity))
                        }
...
